--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rxjs": "^7.2.0",
     "speakeasy": "^2.0.0",
     "swagger-ui-express": "^4.3.0",
+    "typegoose": "^5.9.1",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
