--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "noImplicitUseStrict": true,
-    "strict": false,
+    "noFallthroughCasesInSwitch": false
   }
 }
