--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "date-and-time": "^2.3.1",
+    "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
     "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
